[gd_scene load_steps=20 format=2]

[ext_resource path="res://nodes/entity/Bosses/EntityBoss.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/Bosses/Test/spr_boss_commander_yanmark.png" type="Texture" id=2]
[ext_resource path="res://sprites/Bosses/Test/spr_boss_commander_yanmark_wing.png" type="Texture" id=3]
[ext_resource path="res://scripts/entity/Bosses/EntityBoss_Commander_Yanmark.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="Shader" id=29]
code = "shader_type canvas_item;

uniform float color_palette_modifier : hint_range(0.0, 1.0) = 0.0;

uniform int numberOfColors : hint_range(1, 3);
uniform vec4 C1 : hint_color;
uniform vec4 C2 : hint_color;
uniform vec4 C3 : hint_color;


void fragment(){
	vec4 referenceColors[12];
	referenceColors[0] = C1;
	referenceColors[1] = C2;
	referenceColors[2] = C3;

	
	vec4 textureColor = texture(TEXTURE, UV);
	

	COLOR.rgb = mix(textureColor.rgb,referenceColors[int(floor(textureColor.r * float(numberOfColors)))].rgb,color_palette_modifier);
	COLOR.a = textureColor.a;

}"

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = SubResource( 29 )
shader_param/color_palette_modifier = 0.0
shader_param/numberOfColors = 3
shader_param/C1 = Color( 0.34552, 0.796875, 0.766275, 1 )
shader_param/C2 = Color( 0.556863, 0.901961, 0.878431, 1 )
shader_param/C3 = Color( 0.803922, 0.945098, 1, 1 )

[sub_resource type="Animation" id=5]
resource_name = "SideWays"
length = 0.1
loop = true
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main/Commander_Yanmark_Wing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Some_Weird_Fucking_Thing_IDK"
length = 0.1
loop = true
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main/Commander_Yanmark_Wing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 7, 8, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Standard"
length = 0.1
loop = true
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main/Commander_Yanmark_Wing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 2 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Dying"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Flying"
length = 0.333333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer_Wing:current_animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ "Standard", "Some_Weird_Fucking_Thing_IDK", "SideWays" ]
}

[sub_resource type="Animation" id=14]
length = 1.33333
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.833333, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Commander_Yanmark_main:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Intro_1"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.4, 2.7, 3.2, 3.4 ),
"transitions": PoolRealArray( 2.14355, 0.535887, 1e+06, 0.420448, 1.51572, 0.732043, 1 ),
"update": 0,
"values": [ Vector2( -288, 144 ), Vector2( -68, 24 ), Vector2( 152, -144 ), Vector2( 0, -280 ), Vector2( 0, 10 ), Vector2( 0, 2.86963 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer_Wing:current_animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ "SideWays", "Standard" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Commander_Yanmark_main:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Commander_Yanmark_main/Commander_Yanmark_Wing:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Commander_Yanmark_main:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Intro_2"
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.458333, 0.5, 0.583333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer_Wing:current_animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ "Standard", "Some_Weird_Fucking_Thing_IDK" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Commander_Yanmark_main/Commander_Yanmark_Wing:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=11]
resource_name = "Point"
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.375, 0.416667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer_Wing:current_animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ "Standard", "Some_Weird_Fucking_Thing_IDK" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Commander_Yanmark_main/Commander_Yanmark_Wing:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -288, 144 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Shield"
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Commander_Yanmark_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.4375, 0.5, 0.5625, 0.8125 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:current_animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.875 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "Idle" ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 22, 35.5 )

[node name="EntityBoss_Commander_Yanmark" instance=ExtResource( 1 )]
script = ExtResource( 4 )
hp_max = 32
hp = 32
gravityenabled = false
UseDamageTable = true
Damage_Chart_Path = "res://JSON/damage_chart/damage_chart_standard.json"

[node name="Sprite" parent="." index="0"]
visible = true
material = SubResource( 15 )

[node name="Commander_Yanmark_main" type="Sprite" parent="Sprite" index="0"]
use_parent_material = true
position = Vector2( -288, 144 )
texture = ExtResource( 2 )
flip_h = true
hframes = 13
vframes = 2
frame = 16

[node name="Commander_Yanmark_Wing" type="Sprite" parent="Sprite/Commander_Yanmark_main" index="0"]
show_behind_parent = true
use_parent_material = true
position = Vector2( 6, -14 )
texture = ExtResource( 3 )
flip_h = true
hframes = 5
vframes = 3
frame = 13

[node name="AnimationPlayer_Wing" type="AnimationPlayer" parent="." index="4"]
autoplay = "Standard"
anims/SideWays = SubResource( 5 )
anims/Some_Weird_Fucking_Thing_IDK = SubResource( 7 )
anims/Standard = SubResource( 6 )

[node name="AnimationPlayer" parent="." index="5"]
anims/Dying = SubResource( 9 )
anims/Flying = SubResource( 10 )
anims/Idle = SubResource( 14 )
anims/Intro_1 = SubResource( 2 )
anims/Intro_2 = SubResource( 3 )
anims/Point = SubResource( 11 )
anims/RESET = SubResource( 4 )
anims/Shield = SubResource( 12 )

[node name="Indepentent_things" type="Node" parent="." index="6"]

[node name="ReferenceRect" type="ReferenceRect" parent="Indepentent_things" index="0"]
margin_left = -319.0
margin_top = -148.0
margin_right = 107.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 3, 3.5 )
shape = SubResource( 8 )

[node name="Movement_Tween" type="Tween" parent="." index="8"]

[node name="Yanmark_Rush" type="Node" parent="." index="9"]

[node name="Yanmark_rush_location" type="Position2D" parent="Yanmark_Rush" index="0"]
position = Vector2( 24, -64 )

[node name="Yanmark_rush_spawnpoint" type="Position2D" parent="Yanmark_Rush" index="1"]
position = Vector2( -106, -31 )

[node name="Sprite" type="Sprite" parent="Yanmark_Rush/Yanmark_rush_spawnpoint" index="0"]
visible = false
texture = ExtResource( 5 )

[node name="Yanmark_rush_spawn_mover" type="Tween" parent="Yanmark_Rush" index="2"]

[node name="YR_Spawn_holder" type="Node" parent="Yanmark_Rush" index="3"]

[node name="Idle_Timer" parent="." index="10"]
wait_time = 0.138

[node name="Yanmark_Option" type="Node2D" parent="." index="13"]

[node name="Flash_anim" parent="." index="15"]
autoplay = "Flash"

[connection signal="boss_died" from="." to="." method="_on_EntityBoss_Commander_Yanmark_boss_died"]
[connection signal="state_changed" from="." to="." method="_on_EntityBoss_C_Yanmark_state_changed"]

[editable path="Hurtbox"]
